# Droidpartment

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  PHASE_2_COMPLETION_REPORT.md  README.md  droidpartment-3.2.0.tgz  fix.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
platform-packages/: README.md
rust/: Cargo.toml
rust/crates/dpt-cli/: Cargo.toml
rust/crates/dpt-cli/src/: advisory.rs  cli.rs  compactor.rs  config.rs  flock.rs  hooks.rs  main.rs  paths.rs  revision.rs  stats.rs  stories.rs  tokens.rs
rust/crates/dpt-cli/src/compactor/: adapters.rs
templates/: AGENTS.md  AGENT_IMPORT_TEMPLATE.md  FLOWS.md  PLATFORM.md  cache_manager.py  handoff_protocol.py  memory_system.py
templates/droids/: api-design.md  architect.md  chief.md  database.md  developer.md  devops.md  documentation.md  dpt-api.md  dpt-arch.md  dpt-chief.md  dpt-data.md  dpt-dev.md  dpt-docs.md  dpt-grammar.md  dpt-lead.md  dpt-memory.md  dpt-ops.md  dpt-output.md  dpt-perf.md  dpt-product.md  dpt-qa.md  dpt-research.md  dpt-review.md  dpt-scrum.md  dpt-sec.md  dpt-ux.md  grammar.md  memory.md  output-rules.md  performance.md  product-owner.md  qa-engineer.md  research.md  reviewer.md  scrum-master.md  security.md  tech-lead.md  ux-ui.md
templates/hooks/: hook-post-tool-use.py  hook-pre-tool-use.py  hook-session-end.py  hook-session-start.py  hook-subagent-stop.py  hook-user-prompt-submit.py
templates/memory/: cache_manager.py  context_index.py  episodic.yaml  index.yaml  (+7 more)
tests/: audit-unused.js  install.test.js  regex-probe.js
(+19 files in other folders)
