[workspace]
resolver = "2"
members = ["crates/dpt-cli"]

[workspace.package]
version = "4.0.0"
edition = "2021"
license = "MIT"
authors = ["Nasri"]
repository = "https://github.com/UntaDotMy/Droidpartment"
homepage = "https://github.com/UntaDotMy/Droidpartment"
rust-version = "1.75"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6.0"
tiktoken-rs = "0.11"
fs2 = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
