[package]
name = "dpt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Droidpartment CLI - token-saving multi-agent orchestration for Factory AI"

[[bin]]
name = "dpt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tiktoken-rs = { workspace = true }
fs2 = { workspace = true }
